# BootFX

./: .gitignore  Cargo.toml  PATCHNOTES.md  README.md  StructureAndLogic.md
boot-ui/: Cargo.toml
boot-ui-precompute/: Cargo.toml
boot-ui-precompute/src/: main.rs
boot-ui/src/: main.rs
boot-video-player/: Cargo.toml
boot-video-player/src/: main.rs
bootfx-core/: Cargo.toml
bootfx-core/src/: lib.rs
packaging/: boot-ui.service  boot-video-player.path  boot-video-player.service  example-config.toml  install-arch.sh  patch-sddm-theme-video.sh  video-session.env
