[package]
name = "boot-ui-precompute"
version = "0.1.0"
edition = "2021"
description = "Offline tool: converts mp4 video to ASCII frames + manifest"

[dependencies]
anyhow = "1"
bootfx-core = { path = "../bootfx-core" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
